# Comms

./: CMakeLists.txt  README.md  README.txt  callbacklist.cpp  generateCallBackList.py  generate_cmake.py  key.txt  xBee_to_Platform.xlsx  xbee.txt
C# Example/: Program.cs
C++ Linux Example/: CMakeLists.txt  readMe.txt
C++ Linux Example/lib/: libxbee.a.3.0.11  libxbeep.so.3.0.11
C++ Linux Example/source/: main.cpp  mainUDP.cpp  mainZigBee.cpp
C++ Windows Example/: Source.cpp  SourceSerial.cpp  SourceUDP.cpp  SourceZigBee.cpp  SourceZigbee.cpp
Debug_WIN32/: NGCP_LIB.dll.metagen  NGCP_LIB.lib
Example/C#/: Program.cs
Example/C++ Linux/: CMakeLists.txt
Example/C++ Linux/protonet/include/: protonet_message.h  protonet_parser.h  protonet_protocol.h  serial.h  standard_logic.h  thread.h
Example/C++ Linux/protonet/include/message/: AmyStuff.h  Exit.h  PayloadBayCommand.h  Pong.h  VehicleAuthorizationRequest.h  VehicleBodySensedState.h  VehicleGroundRelativeState.h  VehicleIdentification.h  VehicleSystemStatus.h  VehicleWaypointCommand.h
Example/C++ Linux/protonet/src/: main.cpp  pqueue.cpp  protonet_marshal.cpp  protonet_protocol.cpp  thread.cpp
Example/C++ Linux/protonet/src/message/: AmyStuff.cpp  PayloadBayCommand.cpp  PayloadBayModeCommand.cpp  TargetDesignationCommand.cpp  UGVBatteryStatus.cpp  VehicleAttitude.cpp  VehicleAuthorizationReply.cpp  VehicleGroundRelativeState.cpp  VehicleInertialState.cpp  VehicleModeCommand.cpp  VehicleSystemStatus.cpp  VehicleWaypointCommand.cpp
Example/C++ Linux/source/: main.cpp
Release_WIN32/: NGCP_LIB.dll.metagen  NGCP_LIB.lib
Spoofing/UAVMessage/: CMakeLists.txt  CMakeLists.txt~  UAVMessage.opensdf  UAVMessage.sln
Spoofing/UAVMessage/UAVMessage/: UAVMessage.vcxproj  UAVMessage.vcxproj.filters  fromGCS.cpp  fromGCS.h  main.cpp  main.h
Spoofing/UAVMessage/UAVMessage/Debug/: vc120.idb
Spoofing/UAVMessage/UAVMessage/Debug/UAVMessage.tlog/: CL.read.1.tlog  CL.write.1.tlog  UAVMessage.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Spoofing/UAVMessage/text files/: uavTeleme.csv  uavTeleme.xlsx
comnet/include/: comnet.h  comnet_marshal.h  comnet_message.h  comnet_parser.h  comnet_protocol.h  cond.h  config.h  datalink.h  error_handle.h  mutexCom.h  pqueue.h  priority_queue.h  random_numbers.h  serial.h  udp.h  zigBee.h
comnet/include/message/: AirVehicleGroundRelativeState.h  AmyStuff.h  CommunicationsPayloadCommand.h  CommunicationsPayloadConfigurationCommand.h  CommunicationsPayloadStatus.h  ConnectionReply.h  ConnectionRequest.h  Enter.h  Exit.h  PayloadBayCommand.h  PayloadBayModeCommand.h  PayloadBayStatus.h  PayloadDataRecorderCommand.h  PayloadDataRecorderStatus.h  PayloadOperatingStatus.h  PayloadOperationCommand.h  Ping.h  Pong.h  ROVStatusMessage.h  RawData.h  TargetAcknowledgement.h  TargetDesignationCommand.h  TargetStatus.h  UAVBattery.h  UAVCollisionAvodianceMessage.h  UAVCollisionAvodianceStatus.h  UAVHeading.h  UAVLocation.h  UAVMissionStatus.h  UAVSpeed.h  UGVBatteryStatus.h  UGVJoystick.h  UUVStatus.h  VehicleAttitude.h  VehicleAuthorizationReply.h  VehicleAuthorizationRequest.h  VehicleBodySensedState.h  VehicleGlobalPosition.h  VehicleGroundRelativeState.h  VehicleIdentification.h  (+7 more)
comnet/src/: comnet.cpp  comnet_comcol.cpp  comnet_message.cpp  comnet_parser.cpp  comnet_protocol.cpp  cond.cpp  datalink.cpp  error_handle.cpp  pqueue.cpp  rand_array.cpp  serial.cpp  threadCom.cpp  udp.cpp  zigBee.cpp
comnet/src/message/: AirVehicleGroundRelativeState.cpp  AmyStuff.cpp  CommunicationsPayloadCommand.cpp  CommunicationsPayloadConfigurationCommand.cpp  CommunicationsPayloadStatus.cpp  ConnectionReply.cpp  ConnectionRequest.cpp  Enter.cpp  Exit.cpp  PayloadBayCommand.cpp  PayloadBayModeCommand.cpp  PayloadBayStatus.cpp  Ping.cpp  Pong.cpp  (+33 more)
comwrapper/: com_wrapper.cpp  com_wrapper.h
libxbee3-3.0.11/OSX/: libxbee.a.3.0.11  libxbee.dylib  libxbee.dylib.3.0.11
libxbee3-3.0.11/linux/: libxbee.so.3.0.11  libxbee.so.3.0.11.dbg  libxbeep.a.3.0.11  libxbeep.so.3.0.11.dbg
libxbee3-3.0.11/win32/: libxbee3.dll.map  libxbee3.exp  libxbee3.lib
message_generator/: README.txt  callbacklist.cpp  generate.py  generateCallBackList.py  generateGUI.py  generateXML.py  messageTable.xlsx  message_definition.xml  todo.txt  update_priority.txt  update_readme.txt
message_generator/generate/: __init__.py  check_valid_type.py  com_wrapper_include.py  com_wrapper_src.py  comnet_file_include.py  comnet_file_src.py  comnet_message_include.py  comnet_message_src.py  generate_com_wrapper.py  generate_comnet.py  generate_proto_wrapper.py  generate_protonet.py  lower_case_acronym.py  message_file_include.py  message_file_src.py  message_includes.py  message_sources.py  native.py  proto_wrapper_include.py  proto_wrapper_src.py  protocol_file_include.py  protocol_file_src.py  protonet_file_include.py  protonet_file_src.py  protonet_message_include.py  protonet_message_src.py
message_generator/generate_documentation/: generate.check_valid_type.html  generate.generate_proto_wrapper.html  generate.generate_protonet.html  generate.html  generate.lower_case_acronym.html  generate.message_file_include.html  generate.message_file_src.html  generate.message_includes.html  generate.message_sources.html  generate.native.html  generate.proto_wrapper_include.html  generate.proto_wrapper_src.html  generate.protocol_file_include.html  generate.protocol_file_src.html  generate.protonet_file_include.html  generate.protonet_file_src.html  generate.protonet_message_include.html  generate.protonet_message_src.html
protonet/include/: cond.h  datalink.h  protonet.h  protonet_marshal.h  protonet_message.h  protonet_parser.h  protonet_protocol.h  queue.h  random_numbers.h  standard_logic.h  thread.h  udp.h
protonet/src/: mutex.cpp  pqueue.cpp  protonet.cpp  protonet_message.cpp  protonet_parser.cpp  protonet_protocol.cpp  rand_array.cpp  random_numbers.cpp  thread.cpp  udp.cpp
protowrapper/: proto_wrapper.cpp  proto_wrapper.h
x64/libxbee3-3.0.11/: libxbee3.dll.map  libxbee3.exp  libxbee3.lib
(+84 files in other folders)
